--- a/foods.html
+++ b/foods.html
@@ -66,14 +66,14 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                <img src="images/menu-pizza.jpg" alt="Chicken Pizza" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
                 <h4>Pizza Philly</h4>
                 <p class="food-price">€15</p>
                 <p class="food-detail">
-                    Made with tomatoe sauce, philadelphia cheese and organic vegetables.
+                    Made with tomato sauce, philadelphia cheese and organic vegetables.
                 </p>
                 <br>
 
@@ -83,7 +83,7 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                <img src="images/menu-burger.jpg" alt="Chicken Pizza" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
@@ -100,7 +100,7 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/menu-burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
+                <img src="images/menu-burger.jpg" alt="Chicken Burger" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
@@ -117,14 +117,14 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                <img src="images/menu-pizza.jpg" alt="Chicken Pizza" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
                 <h4>Pizza Philly</h4>
                 <p class="food-price">€12</p>
                 <p class="food-detail">
-                    Made with tomatoe sauce, philadelphia cheese and organic vegetables.
+                    Made with tomato sauce, philadelphia cheese and organic vegetables.
                 </p>
                 <br>
 
@@ -134,14 +134,14 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                <img src="images/menu-pizza.jpg" alt="Chicken Pizza" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
                 <h4>Pizza Philly</h4>
                 <p class="food-price">€12</p>
                 <p class="food-detail">
-                    Made with tomatoe sauce, philadelphia cheese and organic vegetables.
+                    Made with tomato sauce, philadelphia cheese and organic vegetables.
                 </p>
                 <br>
 
@@ -151,14 +151,14 @@
 
         <div class="food-menu-box">
             <div class="food-menu-img">
-                <img src="images/Bolognese-Sauce-square.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                <img src="images/Bolognese-Sauce-square.jpg" alt="Pasta bolognese" class="img-responsive img-curve">
             </div>
 
             <div class="food-menu-desc">
                 <h4>Pasta Bolognese</h4>
                 <p class="food-price">€18</p>
                 <p class="food-detail">
-                    Made with Italian Sauce, Chicken, and organice vegetables.
+                    Made with Italian Sauce, Chicken, and organic vegetables.
                 </p>
                 <br>
 
